# movies_api

./: README.md  pyproject.toml
api/: controllers.py  filters.py  permissions.py  serializers.py  urls.py  views.py
core/: config.py
movie/: admin.py  models.py
movie/migrations/: 0001_initial.py  0002_remove_movie_score.py
movies_api/: asgi.py  settings.py  wsgi.py
pg_docker/: docker-compose-pg.yml
user/: admin.py  models.py
user/migrations/: 0001_initial.py  0002_alter_customuser_options.py
